@@ -28,24 +28,37 @@
  * @library  /tools/lib ../../lib
  * @modules jdk.javadoc/jdk.javadoc.internal.tool
  * @build    toolbox.ToolBox javadoc.tester.*
- * @run main TestRecordTypes
+ * @compile --enable-preview --source ${jdk.version} TestRecordTypes.java
+ * @run main/othervm --enable-preview TestRecordTypes
  */
 
 
 import java.io.IOException;
+import java.lang.annotation.ElementType;
 import java.nio.file.Path;
+import java.util.EnumSet;
+import java.util.Locale;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import javadoc.tester.JavadocTester;
 import toolbox.ToolBox;
 
 public class TestRecordTypes extends JavadocTester {
-
     public static void main(String... args) throws Exception {
         TestRecordTypes tester = new TestRecordTypes();
         tester.runTests(m -> new Object[] { Path.of(m.getName()) });
     }
 
     private final ToolBox tb = new ToolBox();
+
+    // The following constants are set up for use with -linkoffline
+    // (but note: JDK 11 does not include java.lang.Record, so expect
+    // some 404 broken links until we can update this to a stable version.)
+    private static final String externalDocs =
+        "https://docs.oracle.com/en/java/javase/11/docs/api";
+    private static final String localDocs =
+        Path.of(testSrc).resolve("jdk11").toUri().toString();
 
     @Test
     public void testRecordKeywordUnnamedPackage(Path base) throws IOException {
@@ -54,7 +67,9 @@ public class TestRecordTypes extends JavadocTester {
                 "public record R(int r1) { }");
 
         javadoc("-d", base.resolve("out").toString(),
+                "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 src.resolve("R.java").toString());
         checkExit(Exit.OK);
 
@@ -71,7 +86,9 @@ public class TestRecordTypes extends JavadocTester {
                 "package p; public record R(int r1) { }");
 
         javadoc("-d", base.resolve("out").toString(),
+                "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -88,7 +105,9 @@ public class TestRecordTypes extends JavadocTester {
                 "package p; public record R() { }");
 
         javadoc("-d", base.resolve("out").toString(),
+                "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -108,7 +127,9 @@ public class TestRecordTypes extends JavadocTester {
                 + "public record R(int r1) { }");
 
         javadoc("-d", base.resolve("out").toString(),
+                "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -116,7 +137,7 @@ public class TestRecordTypes extends JavadocTester {
                 "<h1 title=\"Record R\" class=\"title\">Record R</h1>",
                 "public record <span class=\"typeNameLabel\">R</span>",
                 "<dl>\n"
-                + "<dt><span class=\"paramLabel\">State Components:</span></dt>\n"
+                + "<dt><span class=\"paramLabel\">Record Components:</span></dt>\n"
                 + "<dd><code><a id=\"param-r1\">r1</a></code> - This is a component.</dd>\n"
                 + "</dl>",
                 "<code><span class=\"memberNameLink\"><a href=\"#%3Cinit%3E(int)\">R</a></span>&#8203;(int&nbsp;r1)</code>");
@@ -133,7 +154,9 @@ public class TestRecordTypes extends JavadocTester {
                 + "public record R<T>(int r1) { }");
 
         javadoc("-d", base.resolve("out").toString(),
+                "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -143,7 +166,7 @@ public class TestRecordTypes extends JavadocTester {
                 "<dl>\n"
                 + "<dt><span class=\"paramLabel\">Type Parameters:</span></dt>\n"
                 + "<dd><code>T</code> - This is a type parameter.</dd>\n"
-                + "<dt><span class=\"paramLabel\">State Components:</span></dt>\n"
+                + "<dt><span class=\"paramLabel\">Record Components:</span></dt>\n"
                 + "<dd><code><a id=\"param-r1\">r1</a></code> - This is a component.</dd>\n"
                 + "</dl>",
                 "<code><span class=\"memberNameLink\"><a href=\"#%3Cinit%3E(int)\">R</a></span>&#8203;(int&nbsp;r1)</code>");
@@ -159,7 +182,9 @@ public class TestRecordTypes extends JavadocTester {
                         + "public record R(int r1) { }");
 
         javadoc("-d", base.resolve("out").toString(),
+                "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -176,10 +201,114 @@ public class TestRecordTypes extends JavadocTester {
                 "<a href=\"#hashCode()\">hashCode</a>",
                 "Returns a hash code value for this object.",
                 "<a href=\"#r1()\">r1</a>",
-                "Returns the value of the <a href=\"#param-r1\"><code>r1</code></a> state component.",
+                "Returns the value of the <a href=\"#param-r1\"><code>r1</code></a> record component.",
                 "<a href=\"#toString()\">toString</a>",
-                "Returns a string representation of this object."
+                "Returns a string representation of this record.",
+                "Method Details",
+                "<span class=\"memberName\">toString</span>",
+                "Returns a string representation of this record. The representation "
+                + "contains the name of the type, followed by the name and value of "
+                + "each of the record components.",
+                "<span class=\"memberName\">hashCode</span>",
+                "Returns a hash code value for this object. The value is derived "
+                + "from the hash code of each of the record components.",
+                "<span class=\"memberName\">equals</span>",
+                "Indicates whether some other object is \"equal to\" this one. "
+                + "The objects are equal if the other object is of the same class "
+                + "and if all the record components are equal. All components "
+                + "in this record are compared with '=='.",
+                "<span class=\"memberName\">r1</span>",
+                "Returns the value of the <a href=\"#param-r1\"><code>r1</code></a> "
+                + "record component."
         );
+    }
+
+    @Test
+    public void testGeneratedCommentsWithLinkOffline(Path base) throws IOException {
+        Path src = base.resolve("src");
+        tb.writeJavaFiles(src,
+                "package p; /** This is record R. \n"
+                        + " * @param r1  This is a component.\n"
+                        + " */\n"
+                        + "public record R(int r1) { }");
+
+        javadoc("-d", base.resolve("out").toString(),
+                "-quiet", "-noindex",
+                "-sourcepath", src.toString(),
+                "-linkoffline", externalDocs, localDocs,
+                "--enable-preview", "--source", thisRelease,
+                "p");
+        checkExit(Exit.OK);
+
+        // While we don't normally test values that just come from resource files,
+        // in these cases, we want to verify that something non-empty was put into
+        // the documentation for the generated members.
+        checkOrder("p/R.html",
+                "<section class=\"constructorSummary\">",
+                "<a href=\"#%3Cinit%3E(int)\">R</a>",
+                "Creates an instance of a <code>R</code> record.",
+                "<section class=\"methodSummary\">",
+                "<a href=\"#equals(java.lang.Object)\">equals</a>",
+                "Indicates whether some other object is \"equal to\" this one.",
+                "<a href=\"#hashCode()\">hashCode</a>",
+                "Returns a hash code value for this object.",
+                "<a href=\"#r1()\">r1</a>",
+                "Returns the value of the <a href=\"#param-r1\"><code>r1</code></a> record component.",
+                "<a href=\"#toString()\">toString</a>",
+                "Returns a string representation of this record.",
+                "Method Details",
+                "<span class=\"memberName\">toString</span>",
+                "Returns a string representation of this record. The representation "
+                + "contains the name of the type, followed by the name and value of "
+                + "each of the record components.",
+                "<span class=\"memberName\">hashCode</span>",
+                "Returns a hash code value for this object. The value is derived "
+                + "from the hash code of each of the record components.",
+                "<span class=\"memberName\">equals</span>",
+                "Indicates whether some other object is \"equal to\" this one. "
+                + "The objects are equal if the other object is of the same class "
+                + "and if all the record components are equal. All components "
+                + "in this record are compared with '=='.",
+                "<span class=\"memberName\">r1</span>",
+                "Returns the value of the <a href=\"#param-r1\"><code>r1</code></a> "
+                + "record component."
+        );
+    }
+
+    @Test
+    public void testGeneratedEqualsPrimitive(Path base) throws IOException {
+        testGeneratedEquals(base, "int a, int b",
+             "All components in this record are compared with '=='.");
+    }
+
+    @Test
+    public void testGeneratedEqualsReference(Path base) throws IOException {
+        testGeneratedEquals(base, "Object a, Object b",
+             "All components in this record are compared with <code>Objects::equals(Object,Object)</code>");
+    }
+
+    @Test
+    public void testGeneratedEqualsMixed(Path base) throws IOException {
+        testGeneratedEquals(base, "int a, Object b",
+             "Reference components are compared with <code>Objects::equals(Object,Object)</code>; "
+             + "primitive components are compared with '=='.");
+    }
+
+    private void testGeneratedEquals(Path base, String comps, String expect) throws IOException {
+        Path src = base.resolve("src");
+        tb.writeJavaFiles(src,
+                "package p; /** This is record R. \n"
+                        + " */\n"
+                        + "public record R(" + comps + ") { }");
+
+        javadoc("-d", base.resolve("out").toString(),
+                "-quiet", "-noindex",
+                "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
+                "p");
+        checkExit(Exit.OK);
+
+        checkOrder("p/R.html", expect);
     }
 
     @Test
@@ -198,7 +327,9 @@ public class TestRecordTypes extends JavadocTester {
                 + "}");
 
         javadoc("-d", base.resolve("out").toString(),
+                "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -218,4 +349,100 @@ public class TestRecordTypes extends JavadocTester {
         );
     }
 
+    @Test
+    public void testExamples(Path base) throws IOException {
+        javadoc("-d", base.resolve("out-no-link").toString(),
+                "-quiet", "-noindex",
+                "-sourcepath", testSrc.toString(),
+                "-linksource",
+                "--enable-preview", "--source", thisRelease,
+                "examples");
+
+        checkExit(Exit.OK);
+        javadoc("-d", base.resolve("out-with-link").toString(),
+                "-quiet", "-noindex",
+                "-sourcepath", testSrc.toString(),
+                "-linksource",
+                "-linkoffline", externalDocs, localDocs,
+                "--enable-preview", "--source", thisRelease,
+                "examples");
+        checkExit(Exit.OK);
+    }
+
+    @Test
+    @SuppressWarnings("preview")
+    public void testAnnotations(Path base) throws IOException {
+        ElementType[] types = {
+                ElementType.FIELD,
+                ElementType.METHOD,
+                ElementType.PARAMETER,
+                ElementType.RECORD_COMPONENT
+        };
+        for (int i = 0; i < (1 << types.length); i++) {
+            Set<ElementType> set = EnumSet.noneOf(ElementType.class);
+            for (int b = 0; b < types.length; b++) {
+                if ((i & (1 << b)) != 0) {
+                    set.add(types[b]);
+                }
+            }
+            testAnnotations(base, set);
+        }
+    }
+
+    void testAnnotations(Path base, Set<ElementType> types) throws IOException {
+        out.println("test " + types);
+        String name = types.isEmpty() ? "none" : types.stream()
+                .map(k -> k.name().toLowerCase(Locale.US))
+                .collect(Collectors.joining("-"));
+        Path dir = base.resolve(name);
+        Path src = dir.resolve("src");
+        String target = types.isEmpty() ? "" : types.stream()
+                .map(s -> "ElementType." + s)
+                .collect(Collectors.joining(", ", "@Target({", "})"));
+        tb.writeJavaFiles(src,
+                "package p;\n"
+                    + "import java.lang.annotation.*;\n"
+                    + "@Documented\n"
+                    + target + "\n"
+                    + " public @interface Anno { }\n",
+                "package p; public @interface UndocAnno { }",
+                "package p; public record R(@Anno int i) { }\n");
+
+        javadoc("-d", dir.resolve("out").toString(),
+                "-quiet", "-noindex",
+                "-sourcepath", src.toString(),
+                "-private",
+                "--enable-preview", "--source", thisRelease,
+                "p");
+        checkExit(Exit.OK);
+
+        checkOutput("p/R.html", false,
+                "UndocAnno");
+
+        Set<ElementType> t = types.isEmpty() ? EnumSet.allOf(ElementType.class) : types;
+        String anno = "<a href=\"Anno.html\" title=\"annotation in p\">@Anno</a>";
+        String rcAnno = t.contains(ElementType.RECORD_COMPONENT) ? anno + " " : "";
+        String fAnno = t.contains(ElementType.FIELD) ? "<span class=\"annotations\">" + anno + "\n</span>" : "";
+        String pAnno = t.contains(ElementType.PARAMETER) ? anno + "\n" : "";
+        String mAnno= t.contains(ElementType.METHOD) ? "<span class=\"annotations\">" + anno + "\n</span>" : "";
+
+        checkOutput("p/R.html", true,
+                "<pre>public record <span class=\"typeNameLabel\">R</span>("
+                        + rcAnno
+                        + "int&nbsp;i)\n" +
+                        "extends java.lang.Record</pre>",
+                "<div class=\"memberSignature\">"
+                        + fAnno
+                        + "<span class=\"modifiers\">private final</span>&nbsp;<span class=\"returnType\">int</span>"
+                        + "&nbsp;<span class=\"memberName\">i</span></div>",
+                "<div class=\"memberSignature\"><span class=\"modifiers\">public</span>&nbsp;<span class=\"memberName\">R</span>"
+                        + "&#8203;(<span class=\"arguments\">"
+                        + pAnno
+                        + "int&nbsp;i)</span></div>",
+                "<div class=\"memberSignature\">"
+                        + mAnno
+                        + "<span class=\"modifiers\">public</span>&nbsp;<span class=\"returnType\">int</span>"
+                        + "&nbsp;<span class=\"memberName\">i</span>()</div>");
+
+    }
 }
