@@ -1,8 +1,8 @@
 /*
  * @test /nodynamiccopyright/
-   @bug 8187420
+ * @bug 8187420 8231827
  * @summary Error message mentions relevant types transposed
- * @compile/fail/ref=EnsureTypesOrderTest.out -XDrawDiagnostics EnsureTypesOrderTest.java
+ * @compile/fail/ref=EnsureTypesOrderTest.out -XDrawDiagnostics --enable-preview -source ${jdk.version} EnsureTypesOrderTest.java
  */
 public class EnsureTypesOrderTest {
     public static void main(String [] args) {
