@@ -43,7 +43,8 @@ import static org.testng.Assert.assertEquals;
  * @summary Negative compilation tests, and positive compilation (smoke) tests for records
  * @library /lib/combo
  * @modules jdk.compiler/com.sun.tools.javac.util
- * @run testng RecordCompilationTests
+ * @compile --enable-preview -source ${jdk.version} RecordCompilationTests.java
+ * @run testng/othervm --enable-preview RecordCompilationTests
  */
 @Test
 public class RecordCompilationTests extends CompilationTestCase {
@@ -54,10 +55,7 @@ public class RecordCompilationTests extends CompilationTestCase {
 
     private static final List<String> BAD_COMPONENT_NAMES = List.of(
             "clone", "finalize", "getClass", "hashCode",
-            "notify", "notifyAll", "readObjectNoData",
-            "readResolve", "serialPersistentFields",
-            "serialVersionUID", "toString", "wait",
-            "writeReplace");
+            "notify", "notifyAll", "toString", "wait");
 
     {
         setDefaultFilename("R.java");
@@ -69,19 +67,20 @@ public class RecordCompilationTests extends CompilationTestCase {
         assertFail("compiler.err.premature.eof", "record R();");
         assertFail("compiler.err.illegal.start.of.type", "record R(,) { }");
         assertFail("compiler.err.illegal.start.of.type", "record R((int x)) { }");
-        assertFail("compiler.err.expected", "record R { }");
+        assertFail("compiler.err.record.header.expected", "record R { }");
         assertFail("compiler.err.expected", "record R(foo) { }");
         assertFail("compiler.err.expected", "record R(int int) { }");
         assertFail("compiler.err.mod.not.allowed.here", "abstract record R(String foo) { }");
-        assertFail("compiler.err.illegal.combination.of.modifiers", "non-sealed record R(String foo) { }");
+        //assertFail("compiler.err.illegal.combination.of.modifiers", "non-sealed record R(String foo) { }");
         assertFail("compiler.err.repeated.modifier", "public public record R(String foo) { }");
         assertFail("compiler.err.repeated.modifier", "private private record R(String foo) { }");
-        assertFail("compiler.err.record.cant.declare.duplicate.fields", "record R(int x, int x) {}");
+        assertFail("compiler.err.already.defined", "record R(int x, int x) {}");
         for (String s : List.of("var", "record"))
             assertFail("compiler.err.restricted.type.not.allowed.here", "record R(# x) { }", s);
         for (String s : List.of("public", "private", "volatile", "final"))
             assertFail("compiler.err.record.cant.declare.field.modifiers", "record R(# String foo) { }", s);
         assertFail("compiler.err.varargs.must.be.last", "record R(int... x, int... y) {}");
+        assertFail("compiler.err.instance.initializer.not.allowed.in.records", "record R(int i) { {} }");
     }
 
     public void testGoodDeclarations() {
@@ -128,7 +127,6 @@ public class RecordCompilationTests extends CompilationTestCase {
         for (String s : List.of("record X(int j) { }",
                 "interface I { }",
                 "static { }",
-                "{}",
                 "enum E { A, B }",
                 "class C { }"
         )) {
@@ -164,19 +162,19 @@ public class RecordCompilationTests extends CompilationTestCase {
                 "}");
 
         // instance fields are not
-        assertFail("compiler.err.record.fields.must.be.in.header",
+        assertFail("compiler.err.record.cannot.declare.instance.fields",
                 "public record R(int x) {\n" +
                         "    private final int y = 0;" +
                         "}");
 
         // mutable instance fields definitely not
-        assertFail("compiler.err.record.fields.must.be.in.header",
+        assertFail("compiler.err.record.cannot.declare.instance.fields",
                 "public record R(int x) {\n" +
                         "    private int y = 0;" +
                         "}");
 
         // redeclaring components also not
-        assertFail("compiler.err.record.fields.must.be.in.header",
+        assertFail("compiler.err.record.cannot.declare.instance.fields",
                 "public record R(int x) {\n" +
                         "    private final int x;" +
                         "}");
@@ -191,32 +189,43 @@ public class RecordCompilationTests extends CompilationTestCase {
                 "    public final int x() { return 0; };" +
                 "}");
 
-        assertFail("compiler.err.method.must.be.public",
+        assertFail("compiler.err.invalid.accessor.method.in.record",
                 "public record R(int x) {\n" +
                         "    final int x() { return 0; };" +
                         "}");
 
-        assertFail("compiler.err.method.must.be.public",
+        assertFail("compiler.err.invalid.accessor.method.in.record",
                 "public record R(int x) {\n" +
                         "    int x() { return 0; };" +
                         "}");
 
-        assertFail("compiler.err.method.must.be.public",
+        assertFail("compiler.err.invalid.accessor.method.in.record",
                 "public record R(int x) {\n" +
                         "    private int x() { return 0; };" +
                         "}");
 
-        assertFail("compiler.err.method.cant.throw.checked.exception",
+        assertFail("compiler.err.invalid.accessor.method.in.record",
                    "public record R(int x) {\n" +
                    "    public int x() throws Exception { return 0; };" +
                    "}");
 
         for (String s : List.of("List", "List<?>", "Object", "ArrayList<String>", "int"))
-            assertFail("compiler.err.accessor.return.type.doesnt.match",
+            assertFail("compiler.err.invalid.accessor.method.in.record",
                     "import java.util.*;\n" +
                             "public record R(List<String> x) {\n" +
                             "    public # x() { return null; };" +
                             "}", s);
+
+        assertFail("compiler.err.invalid.accessor.method.in.record",
+                "public record R(int x) {\n" +
+                        "    public <T> int x() { return x; };" +
+                        "}");
+
+        assertFail("compiler.err.invalid.accessor.method.in.record",
+                "public record R(int x) {\n" +
+                        "    static private final j = 0;" +
+                        "    static public int x() { return j; };" +
+                        "}");
     }
 
     public void testConstructorRedeclaration() {
@@ -224,7 +233,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                 "public R(int x) { this(x, 0); }",
                 "public R(int x, int y) { this.x = x; this.y = y; }",
                 "public R { }",
-                "public R { x = 0; }"))
+                "public R { this.x = 0; }"))
             assertOK("record R(int x, int y) { # }", goodCtor);
 
         assertOK("import java.util.*; record R(String x, String y) {  public R { Objects.requireNonNull(x); Objects.requireNonNull(y); } }");
@@ -236,32 +245,62 @@ public class RecordCompilationTests extends CompilationTestCase {
         // Not OK to rearrange or change names
         for (String s : List.of("public R(int y, int x) { this.x = x; this.y = y; }",
                                 "public R(int _x, int _y) { this.x = _x; this.y = _y; }"))
-            assertFail("compiler.err.canonical.with.name.mismatch", "record R(int x, int y) { # }", s);
+            assertFail("compiler.err.invalid.canonical.constructor.in.record", "record R(int x, int y) { # }", s);
 
         // canonical ctor must be public
         for (String s : List.of("", "protected", "private"))
-            assertFail("compiler.err.canonical.constructor.must.be.public", "record R(int x, int y) { # }",
+            assertFail("compiler.err.invalid.canonical.constructor.in.record", "record R(int x, int y) { # }",
                        "# R(int x, int y) { this.x = x; this.y = y; }",
                        s);
 
         // ctor args must match types
-        assertFail("compiler.err.constructor.with.same.erasure.as.canonical",
+        assertFail("compiler.err.invalid.canonical.constructor.in.record",
                 "import java.util.*;\n" +
                         "record R(List<String> list) { # }",
                 "R(List list) { this.list = list; }");
 
         // ctor should not add checked exceptions
-        assertFail("compiler.err.method.cant.throw.checked.exception",
+        assertFail("compiler.err.invalid.canonical.constructor.in.record",
                    "record R() { # }",
                    "public R() throws Exception { }");
 
-        // but unchecked exceptions are OK
-        assertOK("record R() { # }",
+        // not even checked exceptions
+        assertFail("compiler.err.invalid.canonical.constructor.in.record",
+                "record R() { # }",
                  "public R() throws IllegalArgumentException { }");
 
         // If types match, names must match
-        assertFail("compiler.err.canonical.with.name.mismatch",
+        assertFail("compiler.err.invalid.canonical.constructor.in.record",
                    "record R(int x, int y) { public R(int y, int x) { this.x = this.y = 0; }}");
+
+        // first invocation should be one to the canonical
+        assertFail("compiler.err.first.statement.must.be.call.to.another.constructor",
+                "record R(int x, int y) { public R(int y, int x, int z) { this.x = this.y = 0; } }");
+
+        assertOK("record R(int x, int y) { " +
+                 "    public R(int x, int y, int z) { this(x, y); } " +
+                 "}");
+
+        assertOK("record R(int x) { " +
+                "    public R(int x, int y) { this(x, y, 0); } " +
+                "    public R(int x, int y, int z) { this(x); } " +
+                "}");
+
+        assertFail("compiler.err.invalid.canonical.constructor.in.record",
+                "record R<T>(T a) { # }",
+                "public <T> R {}");
+
+        assertFail("compiler.err.invalid.canonical.constructor.in.record",
+                "record R(int i) { # }",
+                "public <T> R(int i) { this.i = i; }");
+
+        assertFail("compiler.err.invalid.canonical.constructor.in.record",
+                "record R<T>(T a) { # }",
+                "public <T> R(T a) { this.a = a; }");
+
+        assertFail("compiler.err.invalid.canonical.constructor.in.record",
+                "record R(int a) { # }",
+                "public R(int a) { super(); this.a = a; }");
     }
 
     public void testAnnotationCriteria() {
@@ -295,17 +334,6 @@ public class RecordCompilationTests extends CompilationTestCase {
         assertFail("compiler.err.annotation.type.not.applicable", imports + A_BAD + "record R(@A int x) { }");
 
         // TODO: OK to redeclare with or without same annos
-    }
-
-    public void testIllegalSerializationMembers() {
-        String template = "record R(int x) { # }";
-        for (String s : List.of("private static final java.io.ObjectStreamField[] serialPersistentFields = {};",
-                                "private void writeObject(java.io.ObjectOutputStream stream) { }",
-                                "private Object writeReplace() { }",
-                                "private Object readResolve() { }",
-                                "private void readObject(java.io.ObjectInputStream stream) { }",
-                                "private void readObjectNoData() { }"))
-            assertFail("compiler.err.illegal.record.member", template, s);
     }
 
     public void testNestedRecords() {
@@ -342,12 +370,27 @@ public class RecordCompilationTests extends CompilationTestCase {
                 "    }\n" +
                 "}");
 
+        // local records can also be final
+        assertOK("class R { \n" +
+                "    void m() { \n" +
+                "        final record RR(int x) { };\n" +
+                "    }\n" +
+                "}");
+
         // Capture locals from local record
         assertOK("class R { \n" +
                 "    void m(int y) { \n" +
                 "        record RR(int x) { public int x() { return y; }};\n" +
                 "    }\n" +
                 "}");
+        // can be contained inside a lambda
+        assertOK("""
+                class Outer {
+                    Runnable run = () -> {
+                        record TestRecord(int i) {}
+                    };
+                }
+                """);
 
         // Can't self-shadow
         assertFail("compiler.err.already.defined",
@@ -363,13 +406,6 @@ public class RecordCompilationTests extends CompilationTestCase {
         assertOK("record R() { public R {} }");
         assertOK("record R(int x) { public R {} }");
 
-        // cases with an instance initializers
-        assertOK("record R(int x) { { this.x = 0; } }");
-        assertOK("record R(int x) { { this.x = 0; } public R {} }");
-
-        // dead code
-        assertOK("record R(int x) { { this.x = 0; } public R { if (false) { this.x = x; }} }");
-
         // throwing an unchecked exception
         assertOK("record R(int x) { public R { if (x < 0) { this.x = x; throw new RuntimeException(); }} }");
 
@@ -380,8 +416,85 @@ public class RecordCompilationTests extends CompilationTestCase {
                 "public R { if (x < 0) { this.x = -x; } }");
     }
 
-    public void testReturnInCanonical() {
-        assertFail("compiler.err.canonical.cant.have.return.statement", "record R(int x) { # }",
+    public void testReturnInCanonical_Compact() {
+        assertFail("compiler.err.invalid.canonical.constructor.in.record", "record R(int x) { # }",
                 "public R { return; }");
+        assertFail("compiler.err.invalid.canonical.constructor.in.record", "record R(int x) { # }",
+                "public R { if (i < 0) { return; }}");
+        assertOK("record R(int x) { public R(int x) { this.x = x; return; } }");
+        assertOK("record R(int x) { public R { Runnable r = () -> { return; };} }");
+    }
+
+    public void testNoNativeMethods() {
+        assertFail("compiler.err.mod.not.allowed.here", "record R(int x) { # }",
+                "public native R {}");
+        assertFail("compiler.err.mod.not.allowed.here", "record R(int x) { # }",
+                "public native void m();");
+    }
+
+    public void testRecordsInsideInner() {
+        assertFail("compiler.err.record.declaration.not.allowed.in.inner.classes",
+                "class Outer {\n" +
+                "    class Inner {\n" +
+                "        record R(int a) {}\n" +
+                "    }\n" +
+                "}");
+        assertFail("compiler.err.record.declaration.not.allowed.in.inner.classes",
+                """
+                class Outer {
+                    public void test() {
+                        class Inner extends Outer {
+                            record R(int i) {}
+                        }
+                    }
+                }
+                """);
+        assertFail("compiler.err.record.declaration.not.allowed.in.inner.classes",
+                """
+                class Outer {
+                    Runnable run = new Runnable() {
+                        record TestRecord(int i) {}
+                        public void run() {}
+                    };
+                }
+                """);
+        assertFail("compiler.err.record.declaration.not.allowed.in.inner.classes",
+                """
+                class Outer {
+                    void m() {
+                        record A() {
+                            record B() { }
+                        }
+                    }
+                }
+                """);
+    }
+
+    public void testReceiverParameter() {
+        assertFail("compiler.err.receiver.parameter.not.applicable.constructor.toplevel.class",
+                """
+                record R(int i) {
+                    public R(R this, int i) {
+                        this.i = i;
+                    }
+                }
+                """);
+        assertFail("compiler.err.non-static.cant.be.ref",
+                """
+                class Outer {
+                    record R(int i) {
+                        public R(Outer Outer.this, int i) {
+                            this.i = i;
+                        }
+                    }
+                }
+                """);
+        assertOK(
+                """
+                record R(int i) {
+                    void m(R this) {}
+                    public int i(R this) { return i; }
+                }
+                """);
     }
 }
